# Gaggle

./: pyproject.toml
src/gaggle/: exceptions.py  gaggle.py
tests/test_gaggle/: conftest.py  test_ankicard.py
typings/gaggle/: exceptions.pyi  gaggle.pyi  main.pyi
