# Copyright 2023 The Gaggle Authors. All Rights Reserved.
#
# This file is part of Gaggle.
#
# Gaggle is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# Gaggle is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# Gaggle. If not, see <https://www.gnu.org/licenses/>.
[tool.poetry]
name = "gaggle"
version = "0.1.0"
description = "A program to parse exported files from Anki, make edits, and export those edits as new files."
authors = ["ImplyingICheck <implyingicheck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
yapf = "^0.33.0"
pyright = "^1.1.314"
pre-commit = "^3.3.3"
pytest-cases = "^3.6.14"
xxhash = "^3.2.0"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.yapfignore]
ignore_patterns = [
    "dev_files/*.py",
    "venv/*.py"
]

[tool.yapf]
based_on_style = "yapf"

[tool.pyright]
include = ["src", "tests"]
exclude = ["dev_files/*.py"]
strict = ["src/gaggle"]
reportMissingImports = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
